--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "JARM"
   },
-  "homepage": "./",
+  "homepage": ".",
   "copyright": "Copyright by capstone project group by cabral, asdilla, aduana, tan",
   "license": "MIT",
   "private": true,
