--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@coreui/react": "^3.4.6",
     "@coreui/react-chartjs": "^1.1.0",
     "@coreui/utils": "^1.3.1",
+    "@electron/remote": "^2.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "classnames": "^2.2.6",
+    "concurrently": "^6.5.0",
     "core-js": "^3.9.1",
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
@@ -29,6 +31,7 @@
     "enzyme": "^3.11.0",
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.3.3",
+    "immutable": "^4.0.0",
     "jquery": "^3.6.0",
     "mgr-pdf-viewer-react": "^1.0.3",
     "moment": "^2.29.1",
