--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net-dt": "^1.11.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emoji-picker-react": "^3.4.12",
     "enzyme": "^3.11.0",
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.3.3",
@@ -48,10 +49,12 @@
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-fb-image-grid": "^0.1.5",
     "react-google-charts": "^3.0.15",
     "react-icons": "^4.3.1",
     "react-images": "^1.2.0-beta.7",
     "react-loader-spinner": "^4.0.0",
+    "react-loading-skeleton": "^3.0.2",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
