--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@coreui/react-chartjs": "^1.1.0",
     "@coreui/utils": "^1.3.1",
     "@electron/remote": "^2.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@react-page/editor": "^4.4.1",
+    "@react-page/plugins-image": "^4.4.1",
+    "@react-page/plugins-slate": "^4.4.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
@@ -44,12 +50,13 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-barcodes": "^1.2.0",
+    "react-base64-downloader": "^2.1.7",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-countup": "^6.1.0",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
-    "react-fb-image-grid": "^0.1.5",
+    "react-facebook-photo-grid": "^1.0.10",
     "react-google-charts": "^3.0.15",
     "react-icons": "^4.3.1",
     "react-images": "^1.2.0-beta.7",
