--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-countup": "^6.1.0",
     "react-csv": "^2.0.3",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-facebook-photo-grid": "^1.0.10",
