--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-google-charts": "^3.0.15",
     "react-icons": "^4.3.1",
     "react-images": "^1.2.0-beta.7",
+    "react-linkify": "^1.0.0-alpha",
     "react-loader-spinner": "^4.0.0",
     "react-loading-skeleton": "^3.0.2",
     "react-qr-reader": "^2.2.1",
