--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-barcodes": "^1.2.0",
     "react-base64-downloader": "^2.1.7",
+    "react-bnb-gallery": "^1.4.4",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-countup": "^6.1.0",
     "react-csv": "^2.0.3",
@@ -53,6 +54,7 @@
     "react-linkify": "^1.0.0-alpha",
     "react-loader-spinner": "^4.0.0",
     "react-loading-skeleton": "^3.0.2",
+    "react-photo-gallery": "^8.0.0",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
