--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "@coreui/react": "^3.4.6",
     "@coreui/react-chartjs": "^1.1.0",
     "@coreui/utils": "^1.3.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@react-page/editor": "^4.5.0",
+    "@react-page/plugins-divider": "^4.5.0",
+    "@react-page/plugins-image": "^4.5.0",
+    "@react-page/plugins-slate": "^4.5.0",
+    "@react-page/plugins-spacer": "^4.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
