--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "rsuite": "^5.5.1",
     "sass": "^1.32.8",
     "shortid": "^2.2.16",
     "simple-encryptor": "^4.0.0",
