--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-avatar": "^4.0.0",
     "react-barcodes": "^1.2.0",
     "react-base64-downloader": "^2.1.7",
     "react-bnb-gallery": "^1.4.4",
@@ -62,6 +63,7 @@
     "react-linkify": "^1.0.0-alpha",
     "react-loader-spinner": "^4.0.0",
     "react-loading-skeleton": "^3.0.2",
+    "react-lorem-ipsum": "^1.4.9",
     "react-photo-gallery": "^8.0.0",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.5",
